test/fail/generic-type-not-enough.grace
let Name<T, U> = U

Name<type {}>
